--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         tools:targetApi="31">
         <activity
             android:name=".PickUpWallpaper.UI.SelectWallpaperActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTop"
+            android:theme="@style/Base.Theme.WallpaperInstallApp.FullScreen"/>
 
         <activity
             android:name=".WallpapersList.UI.MainActivity"
